--- a/FRONTEND/src/index.css
+++ b/FRONTEND/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+.input-dark {
+  @apply w-full bg-black border border-neutral-700 rounded-lg px-4 py-2
+  focus:outline-none ;
+}
